# GROMACS-FA

./: README.md  Tutorial.md
examples/1r39/: 1r39.gro  1r39_protein.itp  index.ndx  posre_protein.itp  topol.top
readFA/: CMakeLists.txt  readFA.cpp
readFA/clib/: CMakeLists.txt  NRecipes-UT.c
readFA/include/: AtomForce.h  CoordMat.h  FAafanal.h  FAanalsys.h  FAcrossanal.h  FAdefines.h  FAgraphanal.h  FAmath.h  FAotypes.h  FApfanal.h  FAreader.h  FAseqanal.h  FAsettings.h  FAspfanal.h  FAutility.h  NRecipes-UT.h  real.h  regression.h  rmat.h  rmsd.h  rvec.h
readFA/src/: AtomForce.cpp  CMakeLists.txt  CoordMat.cpp  FAafanal.cpp  FAanalsys.cpp  FAcrossanal.cpp  FAdefines.cpp  FAgraphanal.cpp  FAmath.cpp  FAotypes.cpp  FApfanal.cpp  FAreader.cpp  FAseqanal.cpp  FAsetting.cpp  FAspfanal.cpp  FAutility.cpp  regression.cpp  rmat.cpp  rmsd.cpp  rvec.cpp
readFA/tests/: CMakeLists.txt  containerTest.cpp  coordTest.cpp  rvecTest.cpp
readFA/tools/: CMakeLists.txt  groupData.cpp  readFMP.cpp
scripts/: DrawPairwiseForce.py  addanisou.py  collectFrames.py  genFAMap.py  gmxPre.py  unpackBinaryXYZ.py
